# pico-sd-bootloader

./: .gitmodules  LICENSE  README.md
bootloader/: CMakeLists.txt  main.cpp
bootloader/lib/sd/: hw_config.c  sd.cpp  sd.h
firmware/: CMakeLists.txt  main.cpp  memmap.ld
